--- a/amiibo-search-api/package.json
+++ b/amiibo-search-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Juan Hernandez, Brandon Estrada, Joe Hineno",
+  "author": "Juan Hernandez",
   "license": "ISC",
   "dependencies": {
     "superagent": "^8.0.9"
